edition = '2023';

package gokeeper;
option go_package = "./internal/proto";

import "google/protobuf/timestamp.proto";

// ===== AUTH SERVICE =====

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
}

// ===== SECRET SERVICE =====

service SecretService {
  rpc SetSecret(SetSecretRequest) returns (SetSecretResponse);
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse);
  rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponse);
  rpc ListSecrets(ListSecretsRequest) returns (ListSecretsResponse);
}

message Secret {
  string id = 1;
  bytes data = 2;
  string hash = 3;
  google.protobuf.Timestamp last_modified = 4;
}

message SetSecretRequest {
  Secret secret = 1;
}

message SetSecretResponse {
  bool success = 1;
}

message GetSecretRequest {
  string secret_id = 1;
}

message GetSecretResponse {
  Secret secret = 1;
}

message DeleteSecretRequest {
  string secret_id = 1;
}

message DeleteSecretResponse {
  bool success = 1;
}

message ListSecretsRequest {
}

message ListSecretsResponse {
  repeated Secret secrets = 1;
}

